# item-detection-ranker

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  sample_readme
data/input/: datasetB.parquet
docs/: 1. Code Design and Configuration.docx  1. Code and Configuration.docx  2. Sorting.docx  3. Design.docx  Code Design and Configuration.docx  ~$ Code Design and Configuration.docx  ~$ Code and Configuration.docx
src/item_ranker/: config.py  main.py
src/item_ranker/io/: factory_rdd.py  reader_rdd.py  writer_rdd.py
src/item_ranker/jobs/: _shared.py  task1_etl_job.py  task2_etl_job.py
src/item_ranker/jobs/quality/: skew_validator.py
src/item_ranker/jobs/schema/: mapping.py
src/item_ranker/jobs/transforms/: aggregator.py  base.py  deduplicator.py  enricher.py  pipeline.py  ranking.py  salted_aggregator.py
src/item_ranker/util/: __init__.py  broadcast_helper.py  environment.py  log_manager.py
tests/: conftest.py  test_environment.py  test_log_manager.py  test_main.py
tests/integration/: test_main_end_to_end.py  test_task1_etl_job.py  test_task2_etl_job.py  test_with_real_fixtures.py
tests/unit/: test_config.py  test_io_factory.py  test_main_cli.py  test_schema_mapping.py  test_skew_check.py  test_writer_dated_path.py
tests/unit/transforms/: test_aggregator.py  test_deduplicator.py  test_enricher.py  test_pipeline.py  test_ranking.py  test_salted_aggregator.py
