[project]
name = "item-detection-ranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "-=3.11"
dependencies = [
    "flake8==7.3.0",
    "python-dotenv>=1.1.1",
    "psutil>=7.1.0",
    "pyspark==4.0.2",
    "pytest==9.0.2",
    "dotenv>=0.9.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests using real ~1M-row fixtures",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
